k8s/ingress-ingress-edit.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: msa-flask-svc-lb
  namespace: msa-flask
  annotations:
    # Flask 앱이 / 경로에서 동작하므로 rewrite 없이 그대로 전달
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: svc-auth
                port:
                  number: 80
          - path: /board
            pathType: Prefix
            backend:
              service:
                name: svc-board
                port:
                  number: 80
          - path: /mypage
            pathType: Prefix
            backend:
              service:
                name: svc-mypage
                port:
                  number: 80
          - path: /study
            pathType: Prefix
            backend:
              service:
                name: svc-study
                port:
                  number: 80
          - path: /admin
            pathType: Prefix
            backend:
              service:
                name: svc-admin
                port:
                  number: 80
    - host: argocd.homelab.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: argocd-server
                port:
                  number: 443
